== v0.10.0 [2012-01-25] Michael Granger <ged@FaerieMUD.org>

- New methods:
  * Mongrel2::Config.settings
  * Mongrel2::Server
    - #control_socket_uri
	- #control_socket
	- #pid_file_path
- Added a new Mongrel2::Constants::DEFAULT_CONTROL_SOCKET constant
- Finished implementation of the rest of the m2sh commands in the ruby analog
- Adding a "sudo" option to m2sh.rb to start the server as root
- Enable the json_serializer plugin for the config ORM classes
- Backing out the change to HTTPResponse to use the @body ivar: changed the negotiation


== v0.9.2 [2011-10-12] Michael Granger <ged@FaerieMUD.org>

Bugfix: dup instead of clone to get rid of frozen status.


== v0.9.1 [2011-10-12] Michael Granger <ged@FaerieMUD.org>

Bugfix: use a dup of the default content-type constant instead 
of the String itself.


== v0.9.0 [2011-10-12] Michael Granger <ged@FaerieMUD.org>

- Fix Mongrel2::Table not duping/cloning its internal values.
- Set a default Content-type header in HTTP responses


== v0.8.0 [2011-10-12] Michael Granger <ged@FaerieMUD.org>

- Split out the normalization of HTTP response headers into two
  methods for overriding.


== v0.7.0 [2011-10-09] Michael Granger <ged@FaerieMUD.org>

- Add an optional #request attribute to Mongrel2::Response and make
  Response.from_request set it. This is to make things like content-
  negotiation less of a pain in the ass.
- Log request and response both at INFO.


== v0.6.0 [2011-10-03] Michael Granger <ged@FaerieMUD.org>

Mongrel2::HTTPRequest enhancements.
- Added #body= for rewriting the entity body
- Added convenience methods for fetching the Content-type and Content-
  encoding headers: #content_type, #content_encoding
- Switched the specs to use Mongrel2::RequestFactory for making
  request objects


== v0.5.0 [2011-09-30] Michael Granger <ged@FaerieMUD.org>

Enhancements:
- Added support for POST and HEAD requests to Mongrel2::RequestFactory.


== v0.4.0 [2011-09-27] Michael Granger <ged@FaerieMUD.org>

Additions: