@@ -41,14 +41,19 @@ server '34D8E57C-3E91-4F24-9BBE-0B53C1827CB4' do
 		route '/source', directory( 'examples/', 'README.txt', 'text/plain' )
 
 		# Handlers
-    	route '/hello', handler( 'tcp://127.0.0.1:9999',  'helloworld-handler' ) 
-    	route '/dump', handler( 'tcp://127.0.0.1:9997', 'request-dumper' ) 
+		route '/hello', handler( 'tcp://127.0.0.1:9999',  'helloworld-handler' ) 
+		route '/dump', handler( 'tcp://127.0.0.1:9997', 'request-dumper' ) 
 
 	end
 
+	filter "/usr/local/lib/mongrel2/filters/null.so",
+		extensions: ["*.html", "*.txt"],
+		min_size: 1000
+
 end
 
-setting "zeromq.threads", 2
+setting "zeromq.threads", 1
 
 mkdir_p 'run'
 mkdir_p 'logs'
+
