@@ -1,0 +1,30 @@
+#!/usr/bin/env ruby
+
+BEGIN {
+	require 'pathname'
+	basedir = Pathname.new( __FILE__ ).dirname.parent.parent.parent
+
+	libdir = basedir + "lib"
+
+	$LOAD_PATH.unshift( basedir ) unless $LOAD_PATH.include?( basedir )
+	$LOAD_PATH.unshift( libdir ) unless $LOAD_PATH.include?( libdir )
+}
+
+require 'rspec'
+
+require 'spec/lib/helpers'
+
+require 'mongrel2'
+require 'mongrel2/config'
+
+
+#####################################################################
+###	C O N T E X T S
+#####################################################################
+
+describe Mongrel2::Config::Filter do
+
+	# No functionality outside of Sequel::Model's purview yet
+
+end
+
