@@ -1,5 +1,9 @@
 == v0.10.0 [2012-01-25] Michael Granger <ged@FaerieMUD.org>
 
+This release includes updates for Mongrel 1.8 and finishes up the m2sh.rb tool.
+
+- New config class: Mongrel2::Config::Filter
+- New DSL directive inside a 'server' section: 'filter'
 - New methods:
   * Mongrel2::Config.settings
   * Mongrel2::Server
@@ -7,10 +11,12 @@
 	- #control_socket
 	- #pid_file_path
 - Added a new Mongrel2::Constants::DEFAULT_CONTROL_SOCKET constant
-- Finished implementation of the rest of the m2sh commands in the ruby analog
+- Finished implementation of the rest of the m2sh commands in the ruby
+  analog
 - Adding a "sudo" option to m2sh.rb to start the server as root
 - Enable the json_serializer plugin for the config ORM classes
-- Backing out the change to HTTPResponse to use the @body ivar: changed the negotiation
+- Backing out the change to HTTPResponse to use the @body ivar: changed
+  the negotiation
 
 
 == v0.9.2 [2011-10-12] Michael Granger <ged@FaerieMUD.org>
